<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uMobile</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="use_drawable">use_drawable</string>
    <string name="dialog_ok">OK</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="error_title">Error</string>
    <string name="retry">Retry</string>
    <string name="upgrade_recommended_title">Upgrade recommended</string>
    <string name="upgrade_required_title">Upgrade required</string>
    <string name="dialog_play_store">Play Store</string>
    <string name="dialog_close">Close app</string>
    <string name="dialog_later">Maybe later</string>
    <string name="config_unavailable">Unfortunately, an error has occurred. Please check your internet connection and try again or visit the website for more information.</string>
    <string name="upgrade_recommended">The current version of this app is out of date. We strongly recommend upgrading. Would you like to do this now?</string>
    <string name="upgrade_required">Unfortunately, the current version of this app is out of date and must be updated. Please visit the Play Store to download the new version.</string>
    <string name="form_error">Please enter a username and password.</string>
    <string name="information_error">Please check your username and password.</string>
    <string name="error">A problem occurred.</string>
    <string name="error_network_connection">There was a connection problem.</string>
    <string name="remember_me">Remember me</string>
    <string name="umobile_header">uMobile Header</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="account_type">apereo.org.umobile</string>
    <string name="reauthenticating">It\'s been a while. Log back in?</string>
    <string name="lockout_reminder">10 incorrect attempts will lock your account.</string>

    <!-- URL constants -->
    <string name="home_page">https://mysail.oakland.edu/uPortal/normal/render.uP</string>
    <string name="root_url">https://mysail.oakland.edu</string>

    <string name="cas_login_root">https://cas.oakland.edu/cas/login?service</string>
    <string name="moodle_login_root">https://moodle.oakland.edu/login/index.php?cas=1</string>

    <string name="login_url">https://cas.oakland.edu/cas/login?service=https://mysail.oakland.edu/uPortal/Login</string>
    <string name="login_service">https://mysail.oakland.edu/uPortal/Login</string>
    <string name="logout_url">https://mysail.oakland.edu/uPortal/Logout</string>
    <string name="ticket_url">https://cas.oakland.edu/cas/v1/tickets</string>
    <string name="forgot_password_url">https://netid.oakland.edu/profile/</string>
    <string name="base_url">https://mysail.oakland.edu</string>
    <string name="layout_json_url">https://mysail.oakland.edu/uPortal/layout.json</string>
    <string name="global_config_url">https://mysail.oakland.edu/umobile-global-config/android/</string>

    <!-- Cookie domains -->
    <string name="uportal_domain">mysail.oakland.edu</string>
    <string name="cas_domain">cas.oakland.edu</string>

</resources>
