<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_dark"
    android:padding="35dp"
    android:clickable="true" >

    <WebView
        android:id="@+id/web_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/login_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_view"
                android:background="@drawable/umobile_header_transparent"
                android:contentDescription="@string/umobile_header"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text"
                android:inputType="textWebEditText"
                android:ems="10"
                android:id="@+id/login_username"
                android:hint="@string/username"
                android:textColor="#FFFFFF"
                android:textColorHint="#C0CFE7"
                android:layout_below="@+id/image_view"
                android:singleLine="true"
                android:imeOptions="flagNoExtractUi"
                android:padding="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text"
                android:inputType="textPassword"
                android:password="true"
                android:ems="10"
                android:id="@+id/login_password"
                android:layout_below="@+id/login_username"
                android:hint="@string/password"
                android:textColor="#FFFFFF"
                android:textColorHint="#C0CFE7"
                android:singleLine="true"
                android:padding="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sign_in"
                android:id="@+id/login_button"
                android:textColor="#FFFFFF"
                android:clickable="true"
                android:background="@drawable/custom_button"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/login_password"
                android:layout_centerHorizontal="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:id="@+id/rememberMe"
                android:checked="true"
                android:textColor="#C0CFE7"
                android:layout_below="@+id/login_button"
                android:layout_alignRight="@+id/login_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/forgot_password"
                android:id="@+id/forgot_password"
                android:textColor="#C0CFE7"
                android:paddingTop="10dp"
                android:layout_below="@+id/rememberMe"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
